--- a/app/styles/Footer.module.css
+++ b/app/styles/Footer.module.css
@@ -1,9 +1,11 @@
 .footer {
- background: white;
- padding-top: 48px;
+    background: white;
+    padding-top: 48px;
+    margin: 0 250px; /* เพิ่มระยะห่างจากขอบจอ 250px */
+    max-width: calc(100% - 500px); /* ใช้ความกว้างที่คำนวณ */
 }
 
-.footerRow1 {
+.footerRow1, .footerRow2 {
     display: flex;
     justify-content: space-between;
     max-width: 100%; /* ใช้ max-width แทน */
@@ -11,24 +13,13 @@
     padding: 12px;
     box-shadow: none;
 }
-
-.footerRow2 {
-    display: flex;
-    justify-content: space-between;
-    max-width: 100%; /* ใช้ max-width แทน */
-    margin: 0;
-    padding: 12px;
-    box-shadow: none;
-}
-
 
 .footColumn {
     display: flex;
-    /* ใช้ flexbox สำหรับแต่ละคอลัมน์ */
-    flex-direction: column;
-    /* จัดแนวเป็นคอลัมน์ */
-    margin: 0px 150px 0px 150px;
-    /* เพิ่มระยะห่างซ้ายขวา */
+    flex-direction: column; /* จัดแนวเป็นคอลัมน์ */
+    margin: 0; /* ลบ margin ที่เคยมี */
+    flex: 1; /* ให้แต่ละคอลัมน์มีความกว้างเท่ากัน */
+    padding: 0 20px; /* เพิ่มระยะห่างซ้ายขวาให้แต่ละคอลัมน์ */
 }
 
 .footer a {
@@ -36,29 +27,21 @@
     padding: 10px;
 }
 
-
 .linkBold {
-    font-size: 16px;
-    /* ขนาดฟอนต์ใหญ่ */
-    font-weight: bold;
-    /* ฟอนต์หนา */
-    color: black;
-    /* สีฟอนต์ */
+    font-size: 16px; /* ขนาดฟอนต์ใหญ่ */
+    font-weight: bold; /* ฟอนต์หนา */
+    color: black; /* สีฟอนต์ */
 }
 
 .linkText {
-    font-size: 16px;
-    /* ขนาดฟอนต์ใหญ่ */
-    font-weight: normal;
-    /* ฟอนต์หนา */
-    color: black;
-    /* สีฟอนต์ */
+    font-size: 16px; /* ขนาดฟอนต์ใหญ่ */
+    font-weight: normal; /* ฟอนต์หนา */
+    color: black; /* สีฟอนต์ */
 }
 
 .footerLine {
     height: 0.1px; /* Thickness of the line */
     background-color: #C8C8C8; /* Color of the line */
-    width: 90%; /* Full width */
+    width: 100%; /* Full width */
     margin: auto; /* Spacing above and below the line */
-    justify-content: center;
 }
