--- a/app/styles/homepage/Perspective.module.css
+++ b/app/styles/homepage/Perspective.module.css
@@ -52,8 +52,7 @@
 .articleContainer {
     display: flex; /* ใช้ flexbox แทน grid */
     gap: 20px;
-    margin-top: 20px;
-    margin: 24 250px; /* เพิ่ม margin เพื่อให้ห่างจากขอบจอ 250px */
+    margin: 24px 250px; /* เพิ่ม margin เพื่อให้ห่างจากขอบจอ 250px */
     width: calc(100% - 500px); /* คำนวณความกว้างเพื่อให้มีพื้นที่ทั้งสองข้าง */
     max-width: 1400px; /* ความกว้างสูงสุดของ container */
 }
