Change Quote Font

--- a/app/styles/page.module.css
+++ b/app/styles/page.module.css
@@ -7,10 +7,8 @@
     color: white;
     padding: 24px;
     font-size: 24px;
+    font-family: 'Century', serif; /* Use Century for paragraphs */
 }
-
-
-
 
 
 
