Edit Font and container

--- a/app/styles/homepage/Collection.module.css
+++ b/app/styles/homepage/Collection.module.css
@@ -1,12 +1,27 @@
 .productCollection {
     background: #d8dedc;
-    padding: 12px 0px 12px 0px;
+    padding: 0px 0px 12px 0px;
+}
+
+.collectionHeader{
+    display: flex; 
+    justify-content: space-between; 
+    align-items: center; 
+    padding-inline: 200px
+    ;
 }
 
 .collectionTopic {
-    color: black;
+    color: #6C6C6C;
     font-size: 48px;
-    margin-left: 250px;
+    padding-top: 8px;
+}
+
+.viewAll {
+    color: #3B757F;
+    font-size: 24px;
+    font-weight: bold;
+    cursor: pointer;
 }
 
 .collectionParagragh {
@@ -15,21 +30,17 @@
     margin-left: 250px;
 }
 
-/* การตั้งค่าของ Slider */
+
 .collectionSlider {
     width: 100%;
     overflow: hidden;
-    /* ซ่อนสิ่งที่เลื่อนออกนอกจอ */
     position: relative;
-    /* เพื่อให้ child ของมันวางตำแหน่งได้ถูกต้อง */
 }
 
 .sliderTrack {
     display: flex;
     width: calc(300px * 12);
-    /* จำนวน Item x ความกว้างของ Item */
     animation: scroll 15s linear infinite;
-    /* ปรับความเร็วของการเลื่อน */
 }
 
 .collectionItem {
@@ -57,8 +68,9 @@
     color: #708395;
     text-align: center;
     text-decoration: none;
-    font-size: 18px;
-    font-weight: bold;
+    font-size: 16px;
+    font-weight: 600;
+    font-family: 'Quicksand', sans-serif;
 }
 
 /* Animation สำหรับทำให้เลื่อนอย่างต่อเนื่อง */
