--- a/app/styles/footer-content/NormalFooter.module.css
+++ b/app/styles/footer-content/NormalFooter.module.css
@@ -26,7 +26,7 @@
 
 .content h1 {
     /*refer to 16px*/
-    margin-top: 80px;
+    margin-top: 48px;
     font-size: 26px;
 }
 
@@ -53,9 +53,14 @@
     margin-bottom: 12px;
 }
 
-.content .boldText {
+.content .boldText { /*Use for span*/
     font-weight: bold;
 
+}
+
+.content .boldTextBig { /*Use for span*/
+    font-weight: bold;
+    font-size: 24px;
 }
 
 .content .indent {
