--- a/app/styles/footer-content/NormalFooter.module.css
+++ b/app/styles/footer-content/NormalFooter.module.css
@@ -14,6 +14,11 @@
     font-weight: bold;
 }
 
+.topic h3 {
+    font-size: 32px;
+    font-weight: bold;
+}
+
 .topic p {
     font-family: 'Century', serif;
     font-size: 20px;
@@ -58,9 +63,21 @@
 
 }
 
+.content .underlineBoldText { /*Use for span*/
+    font-weight: bold;
+text-decoration: underline;
+}
+
 .content .boldTextBig { /*Use for span*/
     font-weight: bold;
     font-size: 24px;
+}
+
+.redBoldText { 
+    font-weight: bold;
+    font-size: 20px;
+    color: red;
+    text-indent: 40px;
 }
 
 .content .indent {
@@ -70,6 +87,13 @@
 .italicText {
     margin: 100px 0px 24px 0px;
     font-size: 28px;
+    text-align: center;
+}
+
+.italicTextBold {
+    margin: 100px 0px 24px 0px;
+    font-size: 28px;
+    font-weight: bold;
     text-align: center;
 }
 
