--- a/app/styles/Navbar.module.css
+++ b/app/styles/Navbar.module.css
@@ -165,7 +165,7 @@
 .fullDropdown a {
     display: block;
     /* ให้ลิงก์แสดงเป็น block */
-    padding: 10px 20px;
+    padding: 4px 20px;
     /* เพิ่ม padding ให้กับลิงก์ */
     color: black;
     /* สีข้อความ */
@@ -203,6 +203,7 @@
     color: black;
     /* สีฟอนต์ */
     margin-left: 20px;
+    padding-top: 8px;
 }
 
 .linkText {
@@ -213,5 +214,5 @@
     color: black;
     /* สีฟอนต์ */
     margin-left: 40px;
-    padding: 0px 0px 0px 40px;
+    padding: 0px 0px 0px 0px;
 }
