--- a/app/styles/Navbar.module.css
+++ b/app/styles/Navbar.module.css
@@ -88,7 +88,7 @@
     /* พื้นหลังสีเทา */
     color: white;
     /* ตัวอักษรเป็นสีขาว */
-    padding-bottom: 4px;
+    padding-top: 4px;
 }
 
 /* กำหนดให้ไม่มีเส้นใต้ในลิงค์ */
@@ -106,6 +106,13 @@
     margin: 0 20px;
     /* เพิ่มระยะห่างระหว่างลิงค์ */
 }
+
+.thirdRow span {
+    margin: 0 20px;
+    color: white;
+ 
+}
+ 
 
 .dropdownContainer {
     cursor: pointer;
